<resources>
    <string name="app_name">Punkte</string>

    <!-- App Buttons -->
    <string name="zero">0</string>
    <string name="half">&#189;</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="five">5</string>
    <string name="eight">8</string>
    <string name="thirteen">13</string>
    <string name="twenty_one">21</string>
    <string name="thirty_four">34</string>
    <string name="fifty_five">55</string>
    <string name="eighty_nine">89</string>
    <string name="one_hundred_fourty_four">144</string>
    <string name="two_hundred_thirty_three">233</string>
    <string name="three_hundred_seventy_seven">377</string>
    <string name="infinite">∞</string>
    <string name="question_mark">\?</string>
    <!-- =========================================== -->
    <string name="coffee_description">Café</string>
    <string name="counter_strike_description">Counter-Strike</string>
</resources>
