<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="io.github.wolfterro.punkte.MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="2dp"
        tools:ignore="RtlHardcoded"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="2dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <Button
                    android:id="@+id/button_0"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_borders"
                    android:fontFamily="monospace"
                    android:text="@string/zero"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_half"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_borders"
                    android:fontFamily="sans-serif"
                    android:text="@string/half"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_1"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_borders"
                    android:fontFamily="monospace"
                    android:text="@string/one"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <Button
                    android:id="@+id/button_2"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_borders"
                    android:fontFamily="monospace"
                    android:text="@string/two"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_3"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_borders"
                    android:fontFamily="monospace"
                    android:text="@string/three"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_5"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_borders"
                    android:fontFamily="monospace"
                    android:text="@string/five"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <Button
                    android:id="@+id/button_8"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_borders"
                    android:fontFamily="monospace"
                    android:text="@string/eight"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_13"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_borders"
                    android:fontFamily="monospace"
                    android:text="@string/thirteen"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_21"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_borders"
                    android:fontFamily="monospace"
                    android:text="@string/twenty_one"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <Button
                    android:id="@+id/button_34"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_borders"
                    android:fontFamily="monospace"
                    android:text="@string/thirty_four"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_55"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_borders"
                    android:fontFamily="monospace"
                    android:text="@string/fifty_five"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_89"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_borders"
                    android:fontFamily="monospace"
                    android:text="@string/eighty_nine"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <Button
                    android:id="@+id/button_144"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_borders"
                    android:fontFamily="monospace"
                    android:text="@string/one_hundred_fourty_four"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_233"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_borders"
                    android:fontFamily="monospace"
                    android:text="@string/two_hundred_thirty_three"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_377"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_borders"
                    android:fontFamily="monospace"
                    android:text="@string/three_hundred_seventy_seven"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <Button
                    android:id="@+id/button_infinite"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_borders"
                    android:fontFamily="sans-serif"
                    android:text="@string/infinite"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_question_mark"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_borders"
                    android:fontFamily="monospace"
                    android:text="@string/question_mark"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <ImageButton
                    android:id="@+id/imageButton_coffee"
                    android:layout_width="0dp"
                    android:layout_height="128dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="false"
                    android:background="@drawable/button_borders"
                    android:contentDescription="@string/coffee_description"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/coffee_cup" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <ImageButton
                    android:id="@+id/imageButton_cs"
                    android:layout_width="0dp"
                    android:layout_height="128dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="false"
                    android:background="@drawable/button_borders"
                    android:contentDescription="@string/counter_strike_description"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/counter_strike_icon" />
            </TableRow>

        </TableLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
